# vpa06-PdfCheckMaker

./: .env.example  .gitignore  README.md  pyproject.toml
data/: invoices_sample.csv  invoices_sample.json
src/pdfcheckmaker/: __init__.py
src/pdfcheckmaker/bot/: __init__.py  app.py  config.py  documents.py  handlers.py  keyboards.py  messages.py  middleware.py  states.py
src/pdfcheckmaker/core/: __init__.py  exceptions.py  generator.py  models.py  pdf_renderer.py  qr.py
src/pdfcheckmaker/datasources/: __init__.py  base.py  csv_source.py  json_source.py  registry.py
src/pdfcheckmaker/interfaces/cli/: __init__.py  app.py
src/pdfcheckmaker/services/: __init__.py  generation.py
src/pdfcheckmaker/templates_engine/: __init__.py  loader.py  manifest.py
templates/invoice_standard/: manifest.yaml  template.html
tests/: test_bot_config.py  test_bot_documents.py  test_bot_handlers.py  test_bot_keyboards.py  test_bot_middleware.py  test_datasources.py  test_generation_service.py  test_generator.py  test_models.py
