[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfcheckmaker"
version = "0.1.0"
description = "Generate PDF invoices from CSV/JSON data and Jinja2 HTML templates."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "weasyprint>=62.0",
    "jinja2>=3.1",
    "pydantic>=2.6",
    "qrcode[pil]>=7.4",
    "questionary>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5.0",
]

[project.scripts]
pdfcheckmaker = "pdfcheckmaker.interfaces.cli.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--basetemp=output/pytest_tmp -p no:cacheprovider"
